update database mapper